2008-01-11  Dan Winship  <danw@gnome.org>

	* daemon/soup-input-stream.c (soup_input_stream_send)
	(wrapper_callback, soup_input_stream_send_async): Fix for changes
	to g_input_stream_set_pending() since I wrote this.

	* client/gdaemonfile.c (g_daemon_file_hash): x86_64 fix.

2008-01-11  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendhttp.c:
	Make http mount not user visible.
	Set backend mount spec in try_mount.

2008-01-11  Christian Kellner  <gicmo@gnome.org>

	* client/gdaemonvfs.c:
	Fix the double use of a counter variable inside nested loops.

	* client/Makefile.am:
	* client/httpuri.c:
	UriMapper added, which is needed for plain http method.
	
	* configure.ac:
	Check for libsoup version >= 2.2.104

	* daemon/gvfsbackendhttp.c:
	Initial implementation of plain http methods.

	* daemon/Makefile.am:
	* daemon/http.mount.in:
	Added.

	* daemon/soup-input-stream.c:
	* daemon/soup-input-stream.h:
	Import of Dan Winship's libsoup based streaming classes.

2008-01-11  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* configure.ac: Added "eu" (Basque) to ALL_LINGUAS.

2008-01-11  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendcomputer.c:
	Set can't write info on the root.

2008-01-11  Alexander Larsson  <alexl@redhat.com>

	* programs/gvfs-mount.c (list_volumes):
	Fix crash if no mount in volume.

2008-01-11  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * common/gvfsdaemonprotocol.h:
	Implement unmount_mountable and eject_mountable
	on client side.
	
        * common/gmountoperationdbus.c:
	Fix warnings
	
        * daemon/gvfsbackend.[ch]:
        * daemon/gvfsjobunmountmountable.[ch]:
	Add unmount_mountable and eject_mountable in daemon.
	
        * daemon/gvfsbackendcomputer.c:
	Implement unmount_mountable and eject_mountable

        * daemon/gvfsbackendlocaltest.c:
	Update to latest API
	
        * daemon/gvfsbackendsftp.c:
	Fix indentation
	
        * daemon/gvfsjobunmount.c: